fixed some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    margin-top: 100px;
 }
 
 .rounded {
@@ -31,7 +30,7 @@
     /* margin-right: 20%; */
     /*margin-top: 5%;
     margin-left: 40%;*/
-    margin-top: 100px;
+    margin-top: 10px;
     color: #ebebeb;
 }
 
@@ -41,4 +40,6 @@
     justify-content: space-around;
     align-items: flex-end;
     align-content: flex-end;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
